Name:              compilation
Version:           0.0.0.4
Cabal-Version:     >= 1.6
License:           MIT
License-File:      LICENSE
Synopsis:          Haskell functionality for quickly assembling simple compilers.
Description:       Haskell monad and combinators for quickly assembling simple compilation algorithms.
Category:          Compilers/Interpreters, Language
Author:            Andrei Lapets
Maintainer:        Andrei Lapets <a@lapets.io>
Build-Type:        Simple

Library
  Exposed-Modules: Control.Compilation,
                   Control.Compilation.Fresh,
                   Control.Compilation.Module,
                   Control.Compilation.Environment,
                   Control.Compilation.String,
                   Control.Compilation.Sequences,
                   Control.Compilation.Trees
  Build-Depends:   base >= 3 && < 5, MissingH

Source-Repository head
  Type:            git
  Location:        https://github.com/lapets/compilation
